# app/controllers/authController.go
@@ -9,6 +9,18 @@ import (
 	"gorm.io/gorm"
 )
 
+
+// UserSignUp method to create a new user.
+// @Description Create a new user.
+// @Summary create a new user
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param user_account body string true "UserAccount"
+// @Param password body string true "Password"
+// @Param user_role body string true "UserRole"
+// @Success 200 {object} models.User
+// @Router /v1/user/sign/up [post]
 func UserSignUp(c *fiber.Ctx) error {
 	//解析请求体
 	signUp := &models.SignUp{}
@@ -47,6 +59,16 @@ func UserSignUp(c *fiber.Ctx) error {
 
 }
 
+// UserSignIn method to auth user and return access and refresh tokens.
+// @Description Auth user and return access and refresh token.
+// @Summary auth user and return access and refresh token
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param user_account body string true "UserAccount"
+// @Param password body string true "UserPassword"
+// @Success 200 {string} status "ok"
+// @Router /v1/user/sign/in [post]
 func UserSignIn(c *fiber.Ctx) error {
 	//解析请求体
 	signIn := &models.SignIn{}
